# 42Cursus

1. libft/: Makefile  a.out  ft_bzero.c  ft_calloc.c  ft_isalpha.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstdelone.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_putchar_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c  libft.h  main.c
2. ft_printf/: Makefile  check_conv.c  do_case_c.c  do_case_di.c  do_case_p.c  do_case_perc.c  do_case_s.c  do_case_u.c  do_case_x.c  do_case_x_up.c  do_cases.c  do_flags.c  ft_itoa.c  ft_itoa_hex.c  ft_itoa_lhex.c  ft_itoa_uns.c  ft_printf.c  ft_putchar_fd_c.c  ft_putstr_fd_c.c  ft_strlen.c  ft_toupper.c  main.c  printft.h  zero_struct.c
3. get_next_line/: a.out  del.c  deleteme.c  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c  m_test.c  main.c  new_new_test.c  new_test.c  test.c  test1  test_text
4. pipex/: Makefile
5. so_long/: CMakeLists.txt  Makefile  main.c  (+2 more)
push_swap/: CMakeLists.txt  a.out  check_args.c  ft_atoi.c  main.c  merge  merge_sort.c  test.c
push_swap/hdrs/: push_swap.h
push_swap/srcs/: 0.merge_sort.c  a.out  actions.c  actions_1.c  actions_2.c  actions_3.c  algorithm.c  check_args.c  count_needed_actions.c  do_magic.c  do_stuff.c  fill_stacks.c  ft_atoi.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstlast.c  ft_lstnew.c  ft_lstprelast.c  ft_lstsize.c  gt_find_start.c  main.c  merge_sort.c  rename_me.c  set_statuses.c  set_statuses_1.c  set_statuses_2.c  set_statuses_3_test.c  set_statuses_orig.c  test.c  test1.c
push_swap/srcs/libfts/: ft_atoi.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstlast.c  ft_lstnew.c  ft_lstprelast.c
(+545 files in other folders)
