cmake_minimum_required(VERSION 3.20)
project(push_swap C)

set(CMAKE_C_STANDARD 99)

add_executable(push_swap
#        srcs/main.c
#        srcs/test.c
#        srcs/
#        srcs/
#        srcs/
        srcs/actions_1.c
        srcs/actions_2.c
        srcs/actions_3.c
        srcs/algorithm.c
        srcs/check_args.c
        srcs/ft_atoi.c
        srcs/ft_lstadd_back.c
        srcs/ft_lstadd_front.c
        srcs/ft_lstclear.c
        srcs/ft_lstdelone.c
        srcs/ft_lstlast.c
        srcs/ft_lstnew.c
        srcs/ft_lstprelast.c
        srcs/ft_lstsize.c
        srcs/merge_sort.c
        srcs/test1.c
        srcs/set_statuses.c srcs/set_statuses_2.c srcs/set_statuses_1.c srcs/set_statuses_orig.c)
